--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,120 +1,119 @@
 <resources>
     <string name="app_name" translatable="false">PCAPdroid</string>
-    <string name="about_copyright" translatable="false">Copyright (C) 2020-21 - Emanuele Faranda black.silver@hotmail.it</string>
+	<string name="about_copyright" translatable="false">Copyright (C) 2020-21 - Emanuele Faranda black.silver@hotmail.it</string>
     <string name="default_collector_ip" translatable="false">127.0.0.1</string>
     <string name="default_collector_port" translatable="false">1234</string>
 
     <!-- Localized -->
-    <string name="start_button">Start</string>
-    <string name="stop_button">Stop</string>
-    <string name="title_activity_settings">Settings</string>
-    <string name="no_filter">No Filter</string>
-    <string name="collector_info">UDP Collector: %1$s:%2$d</string>
-    <string name="http_server_status">HTTP Server: http://%1$s:%2$d</string>
+    <string name="start_button">启动</string>
+    <string name="stop_button">停止</string>
+    <string name="title_activity_settings">设置</string>
+    <string name="no_filter">无过滤器</string>
+    <string name="collector_info">UDP 收集器： %1$s:%2$d</string>
+    <string name="http_server_status">HTTP 服务器： http://%1$s:%2$d</string>
     <string name="ip_and_port" translatable="false">%1$s:%2$d</string>
-    <string name="up_and_down">%1$s down — %2$s up</string>
+    <string name="up_and_down">%1$s 下行 — %2$s 上行</string>
     <string name="app_and_proto" translatable="false">%1$s (%2$s)</string>
-    <string name="query">Query</string>
-    <string name="host">Host</string>
-    <string name="capture_not_running">Capture not running!</string>
-    <string name="capture_not_started">Capture not started!</string>
-    <string name="app_filter">App Filter</string>
-    <string name="ready">Ready</string>
-    <string name="about">About</string>
+    <string name="query">查询</string>
+    <string name="host">主机</string>
+    <string name="capture_not_running">流量捕获未在运行!</string>
+    <string name="capture_not_started">流量捕获未启动!</string>
+    <string name="app_filter">应用过滤器</string>
+    <string name="ready">就绪</string>
+    <string name="about">关于</string>
     <string name="status">Status</string>
-    <string name="connections_view">Connections</string>
-    <string name="no_connections">No connections</string>
-    <string name="connection_details">Connection Details</string>
-    <string name="app">App</string>
-    <string name="protocol">Protocol</string>
+    <string name="connections_view">连接</string>
+    <string name="no_connections">无连接</string>
+    <string name="connection_details">连接详情</string>
+    <string name="app">应用程序</string>
+    <string name="protocol">协议</string>
     <string name="sni" translatable="false">SNI</string>
-    <string name="source">Source</string>
-    <string name="destination">Destination</string>
+    <string name="source">源</string>
+    <string name="destination">目的地</string>
     <string name="url" translatable="false">URL</string>
-    <string name="bytes">Bytes</string>
-    <string name="packets">Packets</string>
-    <string name="duration">Duration</string>
-    <string name="http_server">HTTP Server</string>
-    <string name="udp_exporter">UDP Exporter</string>
-    <string name="no_dump">None</string>
-    <string name="no_dump_info">PCAP will not be dumped</string>
-    <string name="http_server_info">Start an HTTP server for the PCAP download</string>
-    <string name="udp_exporter_info">Sends the PCAP to a remote UDP receiver</string>
-    <string name="http_server_port">HTTP Server Port</string>
-    <string name="receiver_ip_address">Collector IP Address</string>
-    <string name="receiver_port">Collector Port</string>
-    <string name="dump_mode">Dump Mode</string>
-    <string name="tls_proxy_ip_address">mitmproxy IP Address</string>
-    <string name="tls_proxy_port">mitmproxy Port</string>
-    <string name="enable_tls_decryption">Enable TLS Decryption</string>
-    <string name="enable_tls_decryption_summary">When enabled, all the TLS traffic will be redirected to a remote mitmproxy instance for decryption.</string>
-    <string name="tls_decryption">TLS Decryption</string>
-    <string name="user_guide">User Guide</string>
-    <string name="rate_app">Rate</string>
-    <string name="open_telegram_group">Telegram Group</string>
-    <string name="source_code">Source Code</string>
-    <string name="yes">YES</string>
-    <string name="no">NO</string>
-    <string name="existing_vpn_confirm">The currently active VPN app will be disconnected. Do you want to proceed?</string>
-    <string name="vpn_setup_failed">VPN setup failed</string>
-    <string name="app_not_found">App "%1$s" not found</string>
-    <string name="apps_loading_please_wait">Apps loading in progress, please wait</string>
-    <string name="stats">Stats</string>
-    <string name="active_connections">Active Connections</string>
-    <string name="dropped_connections">Dropped Connections</string>
-    <string name="tot_connections">Total Connections</string>
-    <string name="open_sockets">Open Sockets</string>
-    <string name="max_file_descriptor">Max FD</string>
-    <string name="bytes_sent">Bytes Sent</string>
-    <string name="bytes_rcvd">Bytes Received</string>
-    <string name="packets_sent">Packets Sent</string>
-    <string name="packets_rcvd">Packets Received</string>
-    <string name="dns_queries">DNS Queries</string>
-    <string name="search_apps">Search Apps</string>
-    <string name="no_apps">No apps</string>
-    <string name="dns_server">DNS Server</string>
-    <string name="apps">Apps</string>
-    <string name="remove_app_filter">Remove the app filter</string>
-    <string name="set_app_filter">Set the app filter</string>
-    <string name="navigation_drawer_open">Drawer Open</string>
-    <string name="navigation_drawer_close">Drawer Close</string>
-    <string name="pcap_file">PCAP File</string>
-    <string name="pcap_file_info">Create a PCAP file into the device storage</string>
-    <string name="cannot_write_pcap_file">Cannot write PCAP file</string>
-    <string name="cannot_write_file">Cannot write file</string>
-    <string name="share">Share</string>
-    <string name="delete">Delete</string>
-    <string name="ok">Ok</string>
-    <string name="pcap_file_action">Traffic saved to file %1$s (%2$s).</string>
-    <string name="delete_error">Could not delete file</string>
-    <string name="capture_running">Capture running</string>
-    <string name="notification_msg">%1$s captured, %2$s connections</string>
-    <string name="no_app_filter">No app filter set</string>
+    <string name="bytes">字节</string>
+    <string name="packets">流量包</string>
+    <string name="duration">持续时间</string>
+    <string name="http_server">HTTP 服务器</string>
+    <string name="udp_exporter">UDP 导出器</string>
+    <string name="no_dump">无</string>
+    <string name="no_dump_info">PCAP 不会被转储</string>
+    <string name="http_server_info">启动一个 HTTP 服务器下载 PCAP</string>
+    <string name="udp_exporter_info">发送 PCAP 到远程 UDP 接收器</string>
+    <string name="http_server_port">HTTP 服务器端口</string>
+    <string name="receiver_ip_address">收集器 IP 地址</string>
+    <string name="receiver_port">收集器端口</string>
+    <string name="dump_mode">转储模式</string>
+    <string name="tls_proxy_ip_address">mitmproxy IP 地址</string>
+    <string name="tls_proxy_port">mitmproxy 端口</string>
+    <string name="enable_tls_decryption">启用 TLS 解密</string>
+    <string name="enable_tls_decryption_summary">启用后，所有 TLS 通信都将被重定向到远程 mitmproxy 实例进行解密。</string>
+    <string name="tls_decryption">TLS 解密</string>
+    <string name="user_guide">用户指南</string>
+    <string name="rate_app">评分</string>
+    <string name="open_telegram_group">Telegram 群组</string>
+    <string name="source_code">源代码</string>
+	<string name="yes">是</string>
+    <string name="no">否</string>
+    <string name="existing_vpn_confirm">当前处于活跃状态的 VPN 应用将被断开。你想继续吗？</string>
+	<string name="vpn_setup_failed">VPN 设置失败</string>
+    <string name="app_not_found">未找到应用 "%1$s"</string>
+    <string name="apps_loading_please_wait">应用加载正在进行，请等待</string>
+	<string name="stats">统计数据</string>
+    <string name="active_connections">活动连接</string>
+    <string name="dropped_connections">丢失连接</string>
+    <string name="tot_connections">总连接</string>
+    <string name="open_sockets">开放套接字</string>
+    <string name="max_file_descriptor">最大 FD</string>
+    <string name="bytes_sent">发送字节数</string>
+    <string name="bytes_rcvd">接收字节数</string>
+    <string name="packets_sent">发送数据包</string>
+    <string name="packets_rcvd">接收数据包</string>
+    <string name="dns_queries">DNS 查询</string>
+	<string name="search_apps">搜索应用</string>
+    <string name="no_apps">无应用</string>
+	<string name="dns_server">DNS 服务器</string>
+	<string name="apps">应用程序</string>
+    <string name="remove_app_filter">移除应用过滤器</string>
+    <string name="set_app_filter">设置应用过滤器</string>
+    <string name="navigation_drawer_open">抽屉打开</string>
+    <string name="navigation_drawer_close">抽屉关闭</string>
+    <string name="pcap_file">PCAP 文件</string>
+    <string name="pcap_file_info">在设备存储中创建一个 PCAP 文件</string>
+    <string name="cannot_write_pcap_file">无法写 PCAP 文件</string>
+    <string name="cannot_write_file">无法写文件</string>
+    <string name="share">分享</string>
+    <string name="delete">删除</string>
+    <string name="ok">好的</string>
+    <string name="pcap_file_action">已保存流量到文件 %1$s (%2$s).</string>
+    <string name="delete_error">无法删除文件</string>
+    <string name="capture_running">流量捕获运行中</string>
+    <string name="notification_msg">%1$s 已捕获, %2$s 连接</string>
+    <string name="no_app_filter">未设置应用过滤器</string>
     <string name="proto_and_port">%1$s, %2$d</string>
-    <string name="conn_status_open">Open</string>
-    <string name="first_seen">First Seen</string>
-    <string name="last_seen">Last Seen</string>
-    <string name="conn_status_closed">Closed</string>
-    <string name="copy_to_clipboard">Copy to clipboard</string>
-    <string name="copied_to_clipboard">Copied to clipboard!</string>
-    <string name="connections_csv_fields_v1">IPProto,SrcIP,SrcPort,DstIp,DstPort,Uid,App,Proto,Status,Info,BytesSent,BytesRcvd,PktsSent,PktsRcvd,FirstSeen,LastSeen</string>
-    <string name="save_to_file">Save to file</string>
-    <string name="file_saved">File successfully saved</string>
-    <string name="older_connections_notice">%1$d older connections not shown</string>
-    <string name="about_text">PCAPdroid is an open source network capture and monitoring tool which works without root privileges.</string>
-    <string name="app_no_warranty">PCAPdroid is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.</string>
-    <string name="gpl_license_link">GPLv3 License</string>
-    <string name="get_app">Get it:</string>
-    <string name="tls_how_to">How to setup TLS Decryption</string>
-    <string name="unknown_app">Unknown</string>
-    <string name="vpn_prefs">VPN</string>
-    <string name="enable_ipv6">Enable IPv6</string>
-    <string name="enable_ipv6_summary">Allow IPv6 internet connections. This should only be enabled on networks with an IPv6 gateway.</string>
-    <string name="error">Error</string>
-    <string name="conn_status_unreachable">Unreachable</string>
-    <string name="other_prefs">Other</string>
-    <string name="app_language">App Language</string>
-    <string name="lang_english">English</string>
-    <string name="lang_system_default">System default</string>
+    <string name="conn_status_open">已打开</string>
+    <string name="first_seen">第一次见</string>
+    <string name="last_seen">最后一次见</string>
+    <string name="conn_status_closed">已关闭</string>
+    <string name="copy_to_clipboard">复制到剪贴板</string>
+    <string name="copied_to_clipboard">已复制到剪贴板！</string>
+    <string name="connections_csv_fields_v1">IP协议,源IP,源端口,目标IP,目标端口,Uid,应用,协议,状态,信息,已发送字节数,已接收字节数,已发送数据包,已接收数据包,第一次见,最后一次见</string>
+    <string name="save_to_file">保存到文件</string>
+    <string name="file_saved">文件保存成功</string>
+    <string name="older_connections_notice">%1$d 个较旧连接未显示</string>
+    <string name="about_text">PCAPdroid 是一款无需获取根权限便可进行网络捕获和监视的开源工具</string>
+    <string name="app_no_warranty">分发 PCAPdroid 是希望它会有用，但开发者不提供任何保证；甚至没有对适销性或适合某一特定目的的默示保证。更多细节请参阅 GNU 通用公共许可证。</string>
+    <string name="gpl_license_link">GPLv3 许可</string>
+    <string name="get_app">获取应用:</string>
+    <string name="tls_how_to">如何设置 TLS 解密</string>
+	<string name="unknown_app">未知</string>
+	<string name="vpn_prefs">VPN</string>
+    <string name="enable_ipv6">启用 IPv6</string>
+    <string name="enable_ipv6_summary">允许 IPv6 网络连接。这应该只在带有 IPv6 网关的网络上启用。</string>
+    <string name="error">错误</string>
+	<string name="conn_status_unreachable">不可达</string>
+	<string name="other_prefs">其他</string>
+    <string name="app_language">程序语言</string>
+    <string name="lang_english">英语</string>
+    <string name="lang_system_default">系统默认</string>
 </resources>
-
