Update Chinese Strings and Remove Array.xml (#52)

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -116,4 +116,6 @@
     <string name="app_language">程序语言</string>
     <string name="lang_english">英语</string>
     <string name="lang_system_default">系统默认</string>
+    <string name="no_activity_file_selection">没有找到应用来处理选中的文件</string>
 </resources>
+
