--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,7 +115,7 @@
     <string name="other_prefs">Other</string>
     <string name="app_language">App Language</string>
     <string name="lang_english">English</string>
-    <string name="lang_system_default">System default</string>
+    <string name="system_default">System default</string>
     <string name="no_activity_file_selection">No app found to handle file selection</string>
     <string name="file_saved_with_name">File %1$s successfully saved</string>
     <string name="theme_light">Light</string>
