--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -5,7 +5,7 @@
     <string name="no_filter">Nessun Filtro</string>
     <string name="collector_info">Collettore UDP: %1$s:%2$d</string>
     <string name="http_server_status">Server HTTP: http://%1$s:%2$d</string>
-    <string name="up_and_down">%1$s ricevuti — %2$s inviati</string>
+    <string name="rcvd_and_sent">%1$s ricevuti — %2$s inviati</string>
     <string name="query">Query</string>
     <string name="host">Host</string>
     <string name="capture_not_running">La cattura non è in esecuzione!</string>
@@ -119,5 +119,6 @@
     <string name="root_capture">Cattura come Root</string>
     <string name="root_capture_summary">Catturare i pacchetti come root permette a PCAPdroid di funzionare assieme ad altre app VPN.</string>
     <string name="donate">Donazioni</string>
+    <string name="http_request">Richiesta HTTP</string>
 </resources>
 
