--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,7 +5,7 @@
     <string name="no_filter">Нет фильтра</string>
     <string name="collector_info">UDP сборщик: %1$s:%2$d</string>
     <string name="http_server_status">HTTP сервер: http://%1$s:%2$d</string>
-    <string name="up_and_down">%1$s вниз — %2$s вверх</string>
+    <string name="rcvd_and_sent">%1$s вниз — %2$s вверх</string>
     <string name="query">Запрос</string>
     <string name="host">Главная ЭВМ</string>
     <string name="capture_not_running">Захват не проводится!</string>
