--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,10 @@
     <string name="app_name" translatable="false">PCAPdroid</string>
     <string name="default_collector_ip" translatable="false">127.0.0.1</string>
     <string name="default_collector_port" translatable="false">1234</string>
+    <string name="ip_and_port" translatable="false">%1$s:%2$d</string>
+    <string name="app_and_proto" translatable="false">%1$s (%2$s)</string>
+    <string name="sni" translatable="false">SNI</string>
+    <string name="url" translatable="false">URL</string>
 
     <!-- Localized -->
     <string name="start_button">Start</string>
@@ -10,9 +14,7 @@
     <string name="no_filter">No Filter</string>
     <string name="collector_info">UDP Collector: %1$s:%2$d</string>
     <string name="http_server_status">HTTP Server: http://%1$s:%2$d</string>
-    <string name="ip_and_port" translatable="false">%1$s:%2$d</string>
-    <string name="up_and_down">%1$s down — %2$s up</string>
-    <string name="app_and_proto" translatable="false">%1$s (%2$s)</string>
+    <string name="rcvd_and_sent">%1$s received — %2$s sent</string>
     <string name="query">Query</string>
     <string name="host">Host</string>
     <string name="capture_not_running">Capture not running!</string>
@@ -26,10 +28,8 @@
     <string name="connection_details">Connection Details</string>
     <string name="app">App</string>
     <string name="protocol">Protocol</string>
-    <string name="sni" translatable="false">SNI</string>
     <string name="source">Source</string>
     <string name="destination">Destination</string>
-    <string name="url" translatable="false">URL</string>
     <string name="bytes">Bytes</string>
     <string name="packets">Packets</string>
     <string name="duration">Duration</string>
