--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,5 +129,6 @@
     <string name="root_capture_summary">Capturing packets as root allows PCAPdroid to run with other VPN apps.</string>
     <string name="donate">Donate</string>
     <string name="http_request">HTTP Request</string>
+    <string name="root_log">Root Log</string>
 </resources>
 
