--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name" translatable="false">PCAPdroid</string>
     <string name="default_collector_ip" translatable="false">127.0.0.1</string>
     <string name="default_collector_port" translatable="false">1234</string>
-    <string name="ip_and_port" translatable="false">%1$s:%2$d</string>
+	<string name="ip_and_port" translatable="false">%1$s:%2$d</string>
     <string name="app_and_proto" translatable="false">%1$s (%2$s)</string>
     <string name="sni" translatable="false">SNI</string>
     <string name="url" translatable="false">URL</string>
@@ -10,11 +10,11 @@
     <!-- Localized -->
     <string name="start_button">启动</string>
     <string name="stop_button">停止</string>
-    <string name="title_activity_settings">设置</string>
+	<string name="title_activity_settings">设置</string>
     <string name="no_filter">无过滤器</string>
-    <string name="collector_info">UDP 收集器： %1$s:%2$d</string>
+    <string name="collector_info">UDP 收集器: %1$s:%2$d</string>
     <string name="http_server_status">HTTP 服务器： http://%1$s:%2$d</string>
-    <string name="rcvd_and_sent">%1$s 下行 — %2$s 上行</string>
+	<string name="rcvd_and_sent">%1$s 已接收 — %2$s 已发送</string>
     <string name="query">查询</string>
     <string name="host">主机</string>
     <string name="capture_not_running">流量捕获未在运行!</string>
@@ -22,7 +22,7 @@
     <string name="app_filter">应用过滤器</string>
     <string name="ready">就绪</string>
     <string name="about">关于</string>
-    <string name="status">Status</string>
+    <string name="status">状态</string>
     <string name="connections_view">连接</string>
     <string name="no_connections">无连接</string>
     <string name="connection_details">连接详情</string>
@@ -52,13 +52,13 @@
     <string name="rate_app">评分</string>
     <string name="open_telegram_group">Telegram 群组</string>
     <string name="source_code">源代码</string>
-    <string name="yes">是</string>
+	<string name="yes">是</string>
     <string name="no">否</string>
     <string name="existing_vpn_confirm">当前处于活跃状态的 VPN 应用将被断开。你想继续吗？</string>
-    <string name="vpn_setup_failed">VPN 设置失败</string>
+	<string name="vpn_setup_failed">VPN 设置失败</string>
     <string name="app_not_found">未找到应用 "%1$s"</string>
     <string name="apps_loading_please_wait">应用加载正在进行，请等待</string>
-    <string name="stats">统计数据</string>
+	<string name="stats">统计数据</string>
     <string name="active_connections">活动连接</string>
     <string name="dropped_connections">丢失连接</string>
     <string name="tot_connections">总连接</string>
@@ -69,10 +69,10 @@
     <string name="packets_sent">发送数据包</string>
     <string name="packets_rcvd">接收数据包</string>
     <string name="dns_queries">DNS 查询</string>
-    <string name="search_apps">搜索应用</string>
+	<string name="search_apps">搜索应用</string>
     <string name="no_apps">无应用</string>
-    <string name="dns_server">DNS 服务器</string>
-    <string name="apps">应用程序</string>
+	<string name="dns_server">DNS 服务器</string>
+	<string name="apps">应用程序</string>
     <string name="remove_app_filter">移除应用过滤器</string>
     <string name="set_app_filter">设置应用过滤器</string>
     <string name="navigation_drawer_open">抽屉打开</string>
@@ -105,28 +105,29 @@
     <string name="gpl_license_link">GPLv3 许可</string>
     <string name="get_app">获取应用:</string>
     <string name="tls_how_to">如何设置 TLS 解密</string>
-    <string name="unknown_app">未知</string>
-    <string name="vpn_prefs">VPN</string>
+	<string name="unknown_app">未知</string>
+	<string name="vpn_prefs">VPN</string>
     <string name="enable_ipv6">启用 IPv6</string>
     <string name="enable_ipv6_summary">允许 IPv6 网络连接。这应该只在带有 IPv6 网关的网络上启用。</string>
     <string name="error">错误</string>
-    <string name="conn_status_unreachable">不可达</string>
-    <string name="other_prefs">其他</string>
+	<string name="conn_status_unreachable">不可达</string>
+	<string name="other_prefs">其他</string>
     <string name="app_language">程序语言</string>
     <string name="lang_english">英语</string>
-    <string name="system_default">系统默认</string>
-    <string name="no_activity_file_selection">没有找到应用来处理选中的文件</string>
-    <string name="file_saved_with_name">文件 %1$s 已成功保存</string>
-    <string name="theme_light">浅色</string>
+    <string name="lang_system_default">系统默认</string>
+	<string name="no_activity_file_selection">没有找到应用来处理选中的文件</string>
+	<string name="file_saved_with_name">文件 %1$s 已成功保存</string>
+	<string name="theme_light">浅色</string>
     <string name="theme_dark">深色</string>
     <string name="app_theme">主题</string>
-    <string name="enable_socks5_proxy">启用 SOCKS5 代理</string>
+	<string name="enable_socks5_proxy">启用 SOCKS5 代理</string>
     <string name="enable_socks5_proxy_summary">启用后，所有 TCP 连接将被重定向到指定的 SOCKS5 代理。</string>
     <string name="proxy">代理</string>
     <string name="proxy_ip_address">代理 IP 地址</string>
     <string name="proxy_port">代理端口</string>
-    <string name="root_capture">以根用户身份捕获流量</string>
+	<string name="root_capture">以根用户身份捕获流量</string>
     <string name="root_capture_summary">以根用户身份捕获数据包允许 PCAPdroid 与其他 VPN 应用程序一起运行。</string>
     <string name="donate">捐赠</string>
+	<string name="http_request">HTTP 请求</string>
+	<string name="root_log">Root 日志</string>
 </resources>
-
