--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -120,5 +120,6 @@
     <string name="root_capture_summary">Catturare i pacchetti come root permette a PCAPdroid di funzionare assieme ad altre app VPN.</string>
     <string name="donate">Donazioni</string>
     <string name="http_request">Richiesta HTTP</string>
+    <string name="root_log">Log Root</string>
 </resources>
 
