--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -74,7 +74,7 @@
     <string name="cannot_write_file">Impossibile scrivere il file</string>
     <string name="share">Condividi</string>
     <string name="delete">Elimina</string>
-    <string name="ok">Ok</string>
+    <string name="ok">OK</string>
     <string name="pcap_file_action">Traffico salvato nel file %1$s (%2$s).</string>
     <string name="delete_error">Impossibile eliminare il file</string>
     <string name="capture_running">Cattura in esecuzione</string>
