--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -124,7 +124,7 @@
     <string name="http_request">Solicitação HTTP</string>
     <string name="root_log">Root Log</string>
     <string name="request_plaintext">Solicitação em texto puro</string>
-    <string name="search">Pesquisa</string>
+    <string name="search">Pesquisa…</string>
     <string name="app_val">App: %1$s</string>
     <string name="ip_address_val">Endereço de IP: %1$s</string>
     <string name="host_val">Host: %1$s</string>
