--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -137,9 +137,9 @@
     <string name="host_val">主机: %1$s</string>
     <string name="protocol_val">协议: %1$s</string>
     <string name="cancel">取消</string>
-    <string name="show_exclusions">显示排除项</string>
-    <string name="hide_exclusions">隐藏排除项</string>
-    <string name="show_whitelisted">显示加白的连接</string>
+    <string name="edit">编辑</string>
+    <string name="delete_all">删除全部</string>
+	<string name="show_whitelisted">显示加白的连接</string>
     <string name="hide_whitelisted">隐藏加白的连接</string>
     <string name="whitelist">白名单</string>
     <string name="edit_whitelist">编辑白名单</string>
