--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -122,4 +122,20 @@
     <string name="http_request">HTTP-запрос</string>
     <string name="root_log">Root-журнал</string>
     <string name="request_plaintext">Запрос в чистом виде</string>
+	<string name="search">Поиск</string>
+    <string name="app_val">Приложение: %1$s</string>
+    <string name="ip_address_val">IP адрес: %1$s</string>
+    <string name="host_val">Хост: %1$s</string>
+    <string name="protocol_val">Протокол: %1$s</string>
+    <string name="cancel">Отмена</string>
+    <string name="edit">Изменить</string>
+    <string name="delete_all">Удалить все</string>
+    <string name="show_whitelisted">Показать соединения из белого списка</string>
+    <string name="hide_whitelisted">Скрыть соединения из белого списка</string>
+    <string name="whitelist">Белый список</string>
+    <string name="edit_whitelist">Редактировать белый список</string>
+    <string name="whitelist_action">В белый список</string>
+    <string name="whitelist_empty">Белый список пуст.\nИспользуйте долгое нажатие на строку соединения для добавления.</string>
+    <string name="n_selected">%1$d выбран(о)</string>
+    <string name="select_all">Выбрать все</string>
 </resources>
