--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -12,7 +12,7 @@
     <string name="host">Host</string>
     <string name="capture_not_running">A captura não está funcionando!</string>
     <string name="capture_not_started">A captura não foi iniciada!</string>
-    <string name="app_filter">Filtro do App</string>
+    <string name="app_filter">Filtrar app desejado</string>
     <string name="ready">Pronto</string>
     <string name="about">Sobre</string>
     <string name="status">Status</string>
@@ -30,7 +30,7 @@
     <string name="udp_exporter">Exportador de UDP</string>
     <string name="no_dump">Nenhum</string>
     <string name="no_dump_info">Dados brutos de PCAP não serão disponíveis</string>
-    <string name="http_server_info">Iniciar um servidor de HTTP para o download de PCAP</string>
+    <string name="http_server_info">Inicia um servidor de HTTP para o download de PCAP</string>
     <string name="udp_exporter_info">Envia o PCAP para um receptor UDP remoto</string>
     <string name="http_server_port">Porta do servidor HTTP</string>
     <string name="receiver_ip_address">Endereço IP do receptor</string>
@@ -49,7 +49,7 @@
     <string name="no">NÃO</string>
     <string name="existing_vpn_confirm">O App da VPN que está atualmente ativo será desconectado. Você quer prosseguir?</string>
     <string name="vpn_setup_failed">Configuração da VPN falhou</string>
-    <string name="app_not_found">O "%1$s" App não encontrado</string>
+    <string name="app_not_found">O "%1$s" app não foi encontrado</string>
     <string name="apps_loading_please_wait">Apps estão carregando, por favor aguarde</string>
     <string name="stats">Stats</string>
     <string name="active_connections">Conexões ativas</string>
@@ -62,12 +62,12 @@
     <string name="packets_sent">Pacotes enviados</string>
     <string name="packets_rcvd">Pacotes recebidos</string>
     <string name="dns_queries">Consultas de DNS</string>
-    <string name="search_apps">Procurar Apps</string>
+    <string name="search_apps">Procurar apps</string>
     <string name="no_apps">Nenhum app</string>
     <string name="dns_server">Servidor de DNS</string>
     <string name="apps">Apps</string>
-    <string name="remove_app_filter">Remover o filtro do App</string>
-    <string name="set_app_filter">Definir o filtro do App</string>
+    <string name="remove_app_filter">Remover o filtro do app</string>
+    <string name="set_app_filter">Definir filtro para um app</string>
     <string name="navigation_drawer_open">Abrir aba</string>
     <string name="navigation_drawer_close">Fechar aba</string>
     <string name="pcap_file">Arquivo PCAP</string>
@@ -81,7 +81,7 @@
     <string name="delete_error">Não foi possível excluir o arquivo</string>
     <string name="capture_running">Captura em andamento</string>
     <string name="notification_msg">%1$s capturados, %2$s conexões</string>
-    <string name="no_app_filter">Nenhum filtro do App foi definido</string>
+    <string name="no_app_filter">Nenhum filtro para app foi definido</string>
     <string name="proto_and_port">%1$s, %2$d</string>
     <string name="conn_status_open">Aberto</string>
     <string name="first_seen">Visto primeiro</string>
@@ -108,7 +108,7 @@
     <string name="app_language">Idioma do App</string>
     <string name="lang_english">Inglês</string>
     <string name="system_default">Padrão do sistema</string>
-    <string name="no_activity_file_selection">Nenhum app de seleção de arquivos foi encontrado</string>
+    <string name="no_activity_file_selection">Nenhum app de seleção de arquivos encontrado</string>
     <string name="file_saved_with_name">Arquivo %1$s salvo com sucesso</string>
     <string name="theme_light">Claro</string>
     <string name="theme_dark">Escuro</string>
