--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,8 +156,10 @@
     <string name="installed_on">Installed on</string>
     <string name="last_update">Last Update</string>
     <string name="permissions">Permissions</string>
-    <string name="virtual_app_info">This is a system daemon.</string>
-    <string name="unknown_app_info">\"Unknown\" marks connections whose app could not be determined</string>
+    <string name="root_app_info">System daemons running with maximum privileges.</string>
+    <string name="netd_app_info">The system daemon which performs the DNS resolutions.</string>
+    <string name="android_app_info">The Android system.</string>
+    <string name="unknown_app_info">\"Unknown\" marks connections whose app could not be determined.</string>
     <string name="packets_dropped">Packets Dropped</string>
 </resources>
 
