--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,7 +104,7 @@
     <string name="app_no_warranty">PCAPdroid is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.</string>
     <string name="gpl_license_link">GPLv3 License</string>
     <string name="get_app">Get it:</string>
-    <string name="tls_how_to">How to setup TLS Decryption</string>
+    <string name="tls_how_to">How to setup the TLS decryption</string>
     <string name="unknown_app">Unknown</string>
     <string name="vpn_prefs">VPN</string>
     <string name="enable_ipv6">Enable IPv6</string>
@@ -161,5 +161,9 @@
     <string name="android_app_info">The Android system.</string>
     <string name="unknown_app_info">\"Unknown\" marks connections whose app could not be determined.</string>
     <string name="packets_dropped">Packets Dropped</string>
+    <string name="capture_prefs">Capture</string>
+    <string name="pcapdroid_trailer">PCAPdroid Trailer</string>
+    <string name="pcapdroid_trailer_summary">A trailer containing additional metadata, such as the app name, will be added to the dumped packets.</string>
+    <string name="trailer_how_to">How to display the trailer data in Wireshark</string>
 </resources>
 
